kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: gogear-api
  name: gogear-api
  namespace: seashell
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: gogear-api
  sessionAffinity: None
  type: ClusterIP
