kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
  name: gogear-api
  namespace: seashell
spec:
  ingressClassName: traefik
  rules:
    - host: gogear.grevling.sea-shell.no
      http:
        paths:
          - backend:
              service:
                name: gogear-api
                port:
                  number: 8081
            path: "/api/"
            pathType: Prefix
  tls:
    - hosts:
        - gogear.grevling.sea-shell.no
      secretName: gogear-api-certificate
